# sentech-viewer

./: .gitignore  Makefile.am  README.md  configure.ac  meson.build  org.halfbaked.SentechViewer.json
src/: Makefile.am  colorspaces.c  colorspaces.h  gc-boolean-edit.vala  gc-integer-edit.vala  gc-string-edit.vala  main.vala  meson.build  sentech.gresource.xml  style.css  window.ui  window.vala
src/controls/: gc-enum-edit.vala  gc-float-edit.vala
src/ui/: gc-boolean-edit.ui  gc-enum-edit.ui  gc-float-edit.ui  gc-integer-edit.ui  gc-string-edit.ui  window.ui
tests/: arv-camera-test.vala  dbus-client.vala
vapi/: aravis.vapi  uvc.vapi
